--- a/nginx.conf
+++ b/nginx.conf
@@ -86,6 +86,7 @@ http {
       try_files $uri @whitelisted;
     }
     location @whitelisted {
+	add_header Access-Control-Allow-Origin *;
       proxy_pass http://localhost:8732  ;
     }
   }
